# fed-decision-board

./: .gitignore  README.md  pyproject.toml
src/fed_board/: __init__.py  cli.py  config.py
src/fed_board/agents/: __init__.py  base.py  orchestrator.py  personas.py
src/fed_board/agents/prompts/: __init__.py  system.py
src/fed_board/data/: __init__.py  cache.py  fomc_schedule.py  fred.py  historical_decisions.py  indicators.py
src/fed_board/models/: __init__.py  meeting.py  member.py
src/fed_board/outputs/: __init__.py  dotplot.py  minutes.py  pdf.py
tests/: __init__.py  test_indicators.py  test_models.py  test_personas.py
